--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,3 +19,87 @@ header {
     font-weight: 500;
     font-family: "Inter", serif;
 }
+
+.entry-img {
+    width: 125px;
+    height: 168px;
+    border-radius: 5px;
+}
+
+.entry-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.entry-container {
+    display: flex;
+    width: 470px;
+    height: 168px;
+    margin-top: 100px;
+}
+
+.entry-article-top {
+    display: flex;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.entry-map-logo {
+    height: 10px;
+    width: 7px;
+    margin-right: 2px;
+}
+.entry-article-top a {
+    margin-left: 12px;
+}
+
+.entry-article {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 326px;
+    margin-left: 19px;
+}
+
+.entry-article h3 {
+    font-family: "Inter", serif;
+    font-weight: 400;
+    font-size: 10px;
+    color: #2B283A;
+}
+
+.entry-article a {
+    font-family: "Inter", serif;
+    font-weight: 400;
+    font-size: 10px;
+    color: #918E9B;
+    text-decoration: underline;
+}
+
+.entry-article h2 {
+    font-family: "Inter", serif;
+    font-weight: 700;
+    font-size: 25px;
+    color: #2B283A;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.entry-article h4 {
+    font-family: "Inter", serif;
+    font-weight: 700;
+    font-size: 10px;
+    color: #2B283A;
+    margin-top: 17px;
+    margin-bottom: 0;
+}
+
+.entry-article p {
+    font-family: "Inter", serif;
+    font-weight: 400;
+    font-size: 10px;
+    color: #2B283A;
+    text-align: left;
+    margin-top: 9;
+}
