feat: add styling

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
   padding: 2rem;
   text-align: center;
 }
+
+.app-wrapper {
+  max-width: 550px;
+  margin: auto;
+  background-color: antiquewhite;
+}
